--- a/.github/workflows/pr-deployment.yaml
+++ b/.github/workflows/pr-deployment.yaml
@@ -21,7 +21,7 @@ jobs:
         with:
           route: GET /repos/:repository/deployments
           repository: ${{ github.repository }}
-          environment: ${{ format('dev-pr-{0}', github.event.pull_request.number) }}
+          environment: ${{ format('dev-pr-{0}', github.event.issue.number || github.event.pull_request.number) }}
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
       - name: set previous deployment as inactive
@@ -31,7 +31,7 @@ jobs:
           route: POST /repos/:repository/deployments/:deployment/statuses
           repository: ${{ github.repository }}
           deployment: ${{ fromJson(steps.check-previous.outputs.data)[0].id }}
-          environment: ${{ format('dev-pr-{0}', github.event.pull_request.number) }}
+          environment: ${{ format('dev-pr-{0}', github.event.issue.number || github.event.pull_request.number) }}
           log_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
           state: inactive
         env:
