--- a/.github/workflows/pr-deployment.yaml
+++ b/.github/workflows/pr-deployment.yaml
@@ -36,6 +36,18 @@ jobs:
           state: inactive
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
+      - name: delete from Kubernetes
+        if: ${{ fromJson(steps.check-previous.outputs.data)[0] }}
+        uses: ./.github/workflows/actions/kubernetes
+        with:
+          aws-region: ${{ secrets.AWS_REGION }}
+          aws-role-to-assume: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
+          aws-role-duration-seconds: ${{ secrets.AWS_SESSION_DURATION }}
+          aws-eks-cluster: ${{ secrets.AWS_EKS_CLUSTER }}
+          app-name: ${{ secrets.APP }}
+          ecr-repo-name: ${{ secrets.ECR_REPO }}
+          image-tag: ${{ github.sha }}
+          delete: true
   deploy-check:
     needs: [evict-inactive]
     runs-on: ubuntu-latest
