--- a/.github/workflows/main-deployment.yaml
+++ b/.github/workflows/main-deployment.yaml
@@ -9,8 +9,21 @@ permissions:
   deployments: write
   statuses: write
 jobs:
+  test:
+    name: run tests
+    runs-on: ubuntu-latest
+    env:
+      DOCKER_BUILDKIT: 1
+      BUILDKIT_INLINE_CACHE: 1
+    steps:
+      - uses: actions/checkout@v2
+      - name: run functional tests
+        run: npm run container-test-functional
+      - name: run e2e tests
+        run: npm run container-test-e2e
   setup-deployment:
     runs-on: ubuntu-latest
+    needs: [test]
     outputs:
       deployment: ${{ fromJson(steps.create_deployment.outputs.data).id }}
     steps:
@@ -22,9 +35,9 @@ jobs:
           repository: ${{ github.repository }}
           ref: ${{ github.ref }}
           environment: production
-          transient_environment: false
-          production_environment: true
+          transient_environment: true
           auto_merge: false
+          required_contexts: [test]
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
       - name: set deployment status to in progress
@@ -38,26 +51,11 @@ jobs:
           state: in_progress
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
-  test:
-    name: run tests
-    runs-on: ubuntu-latest
+  push:
+    name: build and push to ECR
     needs: [setup-deployment]
     outputs:
       deployment: ${{ needs.setup-deployment.outputs.deployment }}
-    env:
-      DOCKER_BUILDKIT: 1
-      BUILDKIT_INLINE_CACHE: 1
-    steps:
-      - uses: actions/checkout@v2
-      - name: run functional tests
-        run: npm run container-test-functional
-      - name: run e2e tests
-        run: npm run container-test-e2e
-  push:
-    name: build and push to ECR
-    needs: [test]
-    outputs:
-      deployment: ${{ needs.test.outputs.deployment }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
