--- a/.github/workflows/main-deployment.yaml
+++ b/.github/workflows/main-deployment.yaml
@@ -91,12 +91,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: set env url to var
+        id: set-env-url
         shell: bash
         env:
           ENCODED_URL: ${{ needs.kubernetes.outputs.url }}
         run: |
           export DECODED=$(base64 -D $ENCODED_URL)
-          ::set-env name=ENV_URL::$DECODED
+          ::set-output name=env-url::$DECODED
       - name: set deployment status to success
         id: successful_deployment
         uses: octokit/request-action@v2.x
@@ -104,7 +105,7 @@ jobs:
           route: POST /repos/:repository/deployments/:deployment/statuses
           repository: ${{ github.repository }}
           deployment: ${{ needs.kubernetes.outputs.deployment }}
-          environment_url: ${{ format('http://{0}', env.ENV_URL) }}
+          environment_url: ${{ format('http://{0}', steps.set-env-url.env-url }}
           log_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
           state: success
         env:
