--- a/.github/workflows/pr-deployment.yaml
+++ b/.github/workflows/pr-deployment.yaml
@@ -161,7 +161,7 @@ jobs:
           ENCODED_URL: ${{ needs.kubernetes.outputs.url }}
         run: |
           export DECODED=$(base64 -D $ENCODED_URL)
-          ::set-output name=env-url::$DECODED
+          echo "::set-env name=ENV_URL::$DECODED"
       - name: set deployment status to success
         id: successful_deployment
         uses: octokit/request-action@v2.x
@@ -169,7 +169,7 @@ jobs:
           route: POST /repos/:repository/deployments/:deployment/statuses
           repository: ${{ github.repository }}
           deployment: ${{ needs.kubernetes.outputs.deployment }}
-          environment_url: ${{ format('http://{0}', steps.set-env-url.env-url) }}
+          environment_url: ${{ format('http://{0}', env.ENV_URL) }}
           log_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
           state: success
         env:
