--- a/.github/workflows/main-deployment.yaml
+++ b/.github/workflows/main-deployment.yaml
@@ -91,13 +91,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: set env url to var
-        id: set-env-url
         shell: bash
         env:
           ENCODED_URL: ${{ needs.kubernetes.outputs.url }}
         run: |
           export DECODED=$(base64 -D $ENCODED_URL)
-          ::set-output name=env-url::$DECODED
+          echo "::set-output name=env-url::$DECODED"
       - name: set deployment status to success
         id: successful_deployment
         uses: octokit/request-action@v2.x
@@ -105,7 +104,7 @@ jobs:
           route: POST /repos/:repository/deployments/:deployment/statuses
           repository: ${{ github.repository }}
           deployment: ${{ needs.kubernetes.outputs.deployment }}
-          environment_url: ${{ format('http://{0}', steps.set-env-url.env-url) }}
+          environment_url: ${{ format('http://{0}', env.ENV_URL) }}
           log_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
           state: success
         env:
