--- a/.github/workflows/pr-deployment.yaml
+++ b/.github/workflows/pr-deployment.yaml
@@ -160,7 +160,7 @@ jobs:
         env:
           ENCODED_URL: ${{ needs.kubernetes.outputs.url }}
         run: |
-          export DECODED=$(base64 -D $ENCODED_URL)
+          export DECODED=$(base64 -d $ENCODED_URL)
           echo "::set-env name=ENV_URL::$DECODED"
       - name: set deployment status to success
         id: successful_deployment
