All sorts of ridiculous mistakes before the holiday, smh.

--- a/.github/workflows/main-deployment.yaml
+++ b/.github/workflows/main-deployment.yaml
@@ -95,7 +95,7 @@ jobs:
         env:
           ENCODED_URL: ${{ needs.kubernetes.outputs.url }}
         run: |
-          export DECODED=$(base64 -d $ENCODED_URL)
+          export DECODED=$(echo $ENCODED_URL | base64 -d)
           echo "::set-output name=env-url::$DECODED"
       - name: set deployment status to success
         id: successful_deployment
