--- a/.github/workflows/main-deployment.yaml
+++ b/.github/workflows/main-deployment.yaml
@@ -96,7 +96,7 @@ jobs:
           ENCODED_URL: ${{ needs.kubernetes.outputs.url }}
         run: |
           export DECODED=$(echo $ENCODED_URL | base64 -d)
-          echo "::set-output name=env-url::$DECODED"
+          echo "::set-env name=env-url::$DECODED"
       - name: set deployment status to success
         id: successful_deployment
         uses: octokit/request-action@v2.x
