--- a/.github/workflows/pr-deployment.yaml
+++ b/.github/workflows/pr-deployment.yaml
@@ -156,12 +156,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: set env url to var
+        id: set-env-url
         shell: bash
         env:
           ENCODED_URL: ${{ needs.kubernetes.outputs.url }}
         run: |
           export DECODED=$(echo $ENCODED_URL | base64 -d)
-          echo "::set-env name=ENV_URL::$DECODED"
+          echo "::set-output name=env-url::$DECODED"
       - name: set deployment status to success
         id: successful_deployment
         uses: octokit/request-action@v2.x
@@ -169,7 +170,7 @@ jobs:
           route: POST /repos/:repository/deployments/:deployment/statuses
           repository: ${{ github.repository }}
           deployment: ${{ needs.kubernetes.outputs.deployment }}
-          environment_url: ${{ format('http://{0}', env.ENV_URL) }}
+          environment_url: ${{ format('http://{0}', steps.set-env-url.outputs.env-url) }}
           log_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
           state: success
         env:
