--- a/.github/workflows/main-deployment.yaml
+++ b/.github/workflows/main-deployment.yaml
@@ -71,9 +71,6 @@ jobs:
     name: deploy to Kubernetes
     needs: [push]
     runs-on: ubuntu-latest
-    outputs:
-      deployment: ${{ needs.push.outputs.deployment }}
-      url: ${{ steps.deploy-to-kubernetes.outputs.url }}
     steps:
       - uses: actions/checkout@v2
       - id: deploy-to-kubernetes
@@ -86,25 +83,14 @@ jobs:
           app-name: ${{ secrets.APP }}
           ecr-repo-name: ${{ secrets.ECR_REPO }}
           image-tag: ${{ github.sha }}
-  set-deployment-outcome:
-    needs: [kubernetes]
-    runs-on: ubuntu-latest
-    steps:
-      - name: set env url to var
-        shell: bash
-        env:
-          ENCODED_URL: ${{ needs.kubernetes.outputs.url }}
-        run: |
-          export DECODED=$(echo $ENCODED_URL | base64 -d)
-          echo "::set-output name=env-url::$DECODED"
       - name: set deployment status to success
         id: successful_deployment
         uses: octokit/request-action@v2.x
         with:
           route: POST /repos/:repository/deployments/:deployment/statuses
           repository: ${{ github.repository }}
-          deployment: ${{ needs.kubernetes.outputs.deployment }}
-          environment_url: ${{ format('http://{0}', steps.set-env-url.outputs.env-url) }}
+          deployment: ${{ needs.push.outputs.deployment }}
+          environment_url: ${{ format('http://{0}', steps.deploy-to-kubernetes.outputs.url) }}
           log_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
           state: success
         env:
