--- a/.github/workflows/pr-deployment.yaml
+++ b/.github/workflows/pr-deployment.yaml
@@ -136,9 +136,6 @@ jobs:
     name: deploy to Kubernetes
     needs: [push]
     runs-on: ubuntu-latest
-    outputs:
-      deployment: ${{ needs.push.outputs.deployment }}
-      url: ${{ steps.deploy-to-kubernetes.outputs.url }}
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/workflows/actions/kubernetes
@@ -151,26 +148,14 @@ jobs:
           ecr-repo-name: ${{ secrets.ECR_REPO }}
           app-name: ${{ format('{0}-dev-pr-{1}', secrets.APP, github.event.issue.number) }}
           image-tag: ${{ format('dev-pr-{0}', github.event.issue.number) }}
-  set-deployment-outcome:
-    needs: [kubernetes]
-    runs-on: ubuntu-latest
-    steps:
-      - name: set env url to var
-        id: set-env-url
-        shell: bash
-        env:
-          ENCODED_URL: ${{ needs.kubernetes.outputs.url }}
-        run: |
-          export DECODED=$(echo $ENCODED_URL | base64 -d)
-          echo "::set-output name=env-url::$DECODED"
       - name: set deployment status to success
         id: successful_deployment
         uses: octokit/request-action@v2.x
         with:
           route: POST /repos/:repository/deployments/:deployment/statuses
           repository: ${{ github.repository }}
-          deployment: ${{ needs.kubernetes.outputs.deployment }}
-          environment_url: ${{ format('http://{0}', steps.set-env-url.outputs.env-url) }}
+          deployment: ${{ needs.push.outputs.deployment }}
+          environment_url: ${{ format('http://{0}', steps.deploy-to-kubernetes.url) }}
           log_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
           state: success
         env:
@@ -182,7 +167,7 @@ jobs:
         with:
           route: POST /repos/:repository/deployments/:deployment/statuses
           repository: ${{ github.repository }}
-          deployment: ${{ needs.kubernetes.outputs.deployment }}
+          deployment: ${{ needs.push.outputs.deployment }}
           log_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
           state: failure
         env:
