--- a/.github/workflows/main-deployment.yaml
+++ b/.github/workflows/main-deployment.yaml
@@ -22,6 +22,7 @@ jobs:
       - name: run e2e tests
         run: npm run container-test-e2e
   setup-deployment:
+    name: prepare deployment
     runs-on: ubuntu-latest
     needs: [test]
     outputs:
