--- a/.github/workflows/pr-deployment.yaml
+++ b/.github/workflows/pr-deployment.yaml
@@ -78,6 +78,7 @@ jobs:
     outputs:
       triggered: ${{ steps.check.outputs.triggered }}
   setup-deployment:
+    name: prepare deployment
     runs-on: ubuntu-latest
     needs: [deploy-check]
     outputs:
