--- a/.github/workflows/pr-deployment.yaml
+++ b/.github/workflows/pr-deployment.yaml
@@ -136,7 +136,6 @@ jobs:
           image-tag: ${{ format('dev-pr-{0}', github.event.issue.number) }}
   kubernetes:
     name: deploy to Kubernetes
-    id: deploy-to-kubernetes
     needs: [push]
     runs-on: ubuntu-latest
     steps:
@@ -158,7 +157,7 @@ jobs:
           route: POST /repos/:repository/deployments/:deployment/statuses
           repository: ${{ github.repository }}
           deployment: ${{ needs.push.outputs.deployment }}
-          environment_url: ${{ format('http://{0}', steps.deploy-to-kubernetes.url) }}
+          environment_url: ${{ format('http://{0}', steps.deploy-to-kubernetes.outputs.url) }}
           log_url: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
           state: success
         env:
