--- a/.github/workflows/pr-deployment.yaml
+++ b/.github/workflows/pr-deployment.yaml
@@ -24,6 +24,11 @@ jobs:
           environment: ${{ format('dev-pr-{0}', github.event.issue.number || github.event.pull_request.number) }}
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
+      - name: look at previus
+        env:
+          PREV: ${{ toJson(fromJson(steps.check-previous.outputs.data)) }}
+        shell: bash
+        run: echo $PREV
       - name: set previous deployment as inactive
         if: ${{ toJson(fromJson(steps.check-previous.outputs.data)) == '[]' }}
         uses: octokit/request-action@v2.x
