Dump github env.

--- a/.github/workflows/pr-deployment.yaml
+++ b/.github/workflows/pr-deployment.yaml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - shell: bash
         env:
-          GHENV: ${{ fromJson(github) }}
+          GHENV: ${{ toJson(fromJson(github)) }}
         run: echo $GHENV
       - name: check for previous deployment
         id: check-previous
