--- a/.github/workflows/pr-deployment.yaml
+++ b/.github/workflows/pr-deployment.yaml
@@ -11,21 +11,48 @@ permissions:
   statuses: write
   pull-requests: write
 jobs:
+  get-ref:
+    runs-on: ubuntu-latest
+    outputs:
+      ref: ${{ steps.get-ref-from-pr.outputs.ref || steps.get-ref-from-issue.outputs.ref }}
+    steps:
+      - name: get issue from comment
+        id: get-issue
+        if: github.event_name == 'issue_comment'
+        uses: octokit/request-action@v2.x
+        with:
+          route: GET /repos/:repository/pulls/:issue_id
+          repository: ${{ github.repository }}
+          issue_id: ${{ github.event.issue.number }}
+        env:
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
+      - name: get ref from pr issue
+        id: get-ref-from-issue
+        if: github.event_name == 'issue_comment'
+        shell: bash
+        env:
+          REF: ${{ fromJson(steps.get-issue.outputs.data).head.ref }}
+        run: echo "::set-output name=ref::$REF"
+      - name: get ref from pr
+        id: get-ref-from-pr
+        if: github.event_name == 'pull_request'
+        env:
+          REF: ${{ github.head_ref }}
+        shell: bash
+        run: echo "::set-output name=ref::$REF"
+
   evict-inactive:
+    needs: [get-ref]
     name: evict previous deployment
     runs-on: ubuntu-latest
     steps:
-      - shell: bash
-        env:
-          GHENV: ${{ toJson(fromJson(github)) }}
-        run: echo $GHENV
       - name: check for previous deployment
         id: check-previous
         uses: octokit/request-action@v2.x
         with:
           route: GET /repos/:repository/deployments
           repository: ${{ github.repository }}
-          ref: ${{ github.head_ref }}
+          ref: ${{ needs.get-ref.outputs.ref }}
           environment: development
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
