--- a/.github/workflows/pr-deployment.yaml
+++ b/.github/workflows/pr-deployment.yaml
@@ -35,7 +35,7 @@ jobs:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
       - name: get ref from pr issue
         id: get-ref-from-issue
-        if: github.event_name == 'issue_comment'
+        if: steps.get-issue.outputs.data
         shell: bash
         env:
           REF: ${{ fromJson(steps.get-issue.outputs.data).head.ref }}
