--- a/.github/workflows/pr-deployment.yaml
+++ b/.github/workflows/pr-deployment.yaml
@@ -145,7 +145,7 @@ jobs:
         with:
           route: POST /repos/:repository/deployments
           repository: ${{ github.repository }}
-          body: ${{ toJson(env.REQUEST_BODY) }}
+          data: ${{ toJson(env.REQUEST_BODY) }}
       - name: set deployment status to in progress
         id: start_deployment
         uses: octokit/request-action@v2.x
