--- a/.github/workflows/main-deployment.yaml
+++ b/.github/workflows/main-deployment.yaml
@@ -40,7 +40,7 @@ jobs:
               "auto_merge": false,
               "environment": "production",
               "required_contexts": ["test"]
-            }}', github.ref }}
+            }}', github.ref) }}
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         with:
           route: POST /repos/:repository/deployments
