--- a/.github/workflows/pr-deployment.yaml
+++ b/.github/workflows/pr-deployment.yaml
@@ -81,7 +81,7 @@ jobs:
           aws-role-to-assume: ${{ secrets.AWS_ASSUME_ROLE_ARN }}
           aws-role-duration-seconds: ${{ secrets.AWS_SESSION_DURATION }}
           aws-eks-cluster: ${{ secrets.AWS_EKS_CLUSTER }}
-          app-name: ${{ secrets.APP }}
+          app-name: ${{ format('{0}-dev-pr-{1}', secrets.APP, github.event.issue.number) }}
           ecr-repo-name: ${{ secrets.ECR_REPO }}
           image-tag: ${{ github.sha }}
           delete: true
