--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kubernetes-github-example-quotable
+  name: quotable
 spec:
   selector:
-    app: kubernetes-github-example-quotable
+    app: quotable
   ports:
     - protocol: TCP
       port: 80
